<?xml version="1.0" encoding="UTF-8"?>
<package format="3">
  <name>osm2qr</name>
  <version>1.0.0</version>
  <description>OSM conversion to QR code.</description>
  <author email="lehkysim@fel.cvut.cz">Simon Lehky</author>
  <maintainer email="vlkjan6@fel.cvut.cz">Jan Vlk</maintainer>
  <license>BSD</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
